# ironwood

./: .cursorrules  Cargo.toml  DESIGN.md  check.sh
.github/workflows/: ci.yml
examples/: composition.rs  counter.rs  layout.rs  styling.rs
guide/: book.toml
src/: extraction.rs  interaction.rs  lib.rs  message.rs  model.rs  style.rs  view.rs
src/backends/: mock.rs  mod.rs
src/elements/: layout.rs  mod.rs  text.rs
src/widgets/: button.rs  mod.rs
tests/: composition.rs  concurrency.rs  dynamic_views.rs  extraction.rs  hierarchy.rs  integration.rs  workflow.rs
