[package]
name = "ironwood"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
description = "Ergonomic Rust UI framework with Elm architecture, SwiftUI-style declarative syntax, and native GPU rendering"
repository = "https://github.com/atomCAD/ironwood"
keywords = ["ui", "gui", "elm"]
categories = ["gui"]

[workspace.package]
version = "0.1.0"
publish = false
authors = ["Machine Phase Systems <hello@machinephase.systems>"]
license = "MPL-2.0"
edition = "2024"

[dependencies]
