[package]
name = "ironwood"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
description = "Ergonomic Rust UI framework with Elm architecture, SwiftUI-style declarative syntax, and native GPU rendering"
repository = "https://github.com/atomCAD/ironwood"
keywords = ["ui", "gui", "elm"]
categories = ["gui"]

[workspace.package]
version = "0.1.0"
publish = false
authors = ["Machine Phase Systems <hello@machinephase.systems>"]
license = "MPL-2.0"
edition = "2024"

[dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
# The getrandom crate requires a special feture flag to support web backends, as of version 0.3.
# See also the configuration flag setting in .cargo/config.toml
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
# Testing infrastructure for WASM targets
wasm-bindgen-test = { version = "0.3" }
